2006-01-30  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (noinst_PROGRAMS, noinst_SCRIPTS): Replace
	check_PROGRAMS, and check_SCRIPTS so that tests are always built.

2006-01-27  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (EXTRA_DIST): Add rh177240/strace-clone-exec.shin.

2006-01-25  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am: Where possible use check_PROGRAMS.
	(check-local): Print the compiler version.

2006-01-09  Andrew Cagney  <cagney@redhat.com>

	* rh177240/strace-clone-exec.shin: Add -f option to strace.
	
	* Makefile.am (check_PROGRAMS): Add rh177240/threadexec.
	(check_SCRIPTS): Add rh177240/strace-clone-exec.sh
	(TESTS): Add rh177240/strace-clone-exec.sh.
	(.shin.sh): New rule.
	* rh177240/threadexec.c: New file; copied from
	frysk-core/prog/syscall.
	* rh177240/strace-clone-exec.shin: New file.

2006-01-06  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (process_TESTS): Define.  Append to check_PROGRAMS
	and TESTS.
	
	* Makefile.am (check_PROGRAMS): Add cmdline/dump, and
	cmdline/print.
	(TESTS): Add cmdline/print.
	* cmdline/dump.c: New file.
	* cmdline/print.c: New file.

	* Makefile.am (rh175569/gcj.sh): Change to expected pass.

2006-01-05  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (cdtparserversion/cdttest.sh): Re-implement using
	JAVAC and JAVA.
	
	* gcjtreeiter/.cvsignore: Delete.
	* gcjtreeiter/IterTest.java: Delete.
	* textiter/.cvsignore: Delete.
	* textiter/JNICrash.java: Delete.
	* Makefile.am: Delete corresponding, but disabled rules.
	
	* Makefile.am (gcjtreeiter/a.out, gcjtreeiter/gij.sh)
	(textiter/a.out): Disable.

2006-01-04  Andrew Cagney  <cagney@redhat.com>

	* rh174912/rh174912.java: Add "package rh17492".
	* Makefile.am (rh174912/gcj.sh): Change -drh17492 to -d.
	(rh174912ice/gcj.sh): Ditto.

	* Makefile.am (rh174912/gcj.sh): Add missing -Irh174912.
	(rh174912ice/gcj.sh): Ditto.
	(textiter/a.out, gcjtreeiter/a.out, gcjtreeiter/gij.sh): Add
	/usr/lib/frysk to hard wired rpath.
